
2021-03-20  Ron Norman <rjn@inglenet.com>

	* cobc.c: Set flag for symbol table for -fdump & -G as well
	* codegen.c: Add to cob_symbol how many indexes a variable requires

2021-03-18  Ron Norman <rjn@inglenet.com>

	* cobc.c,flag.def: Changes for compile option  -fsymtab
				to generate a symbol table in the module for 'dump'
				The flag cb_flag_symbols is also enabled with -dump, -ftrace
	* tree.h: added flags to cb_field for symbol table processing
	* codegen.c: A table of 'cob_symbol' is emitted defining all symbols in 
				the module and this is now used for 'dump' instead of
				emitting a bunch of code to do the dump
				For TRACE, a bit is now set in module->flag_debug_trace 
				which is tested before calling the 'trace' routines
				Also, section/paragraph/verb names are now set via pointers 
				in cob_module

2021-02-18  Ron Norman <rjn@inglenet.com>

	* cobc.c: Changes to replace VB-CISAM with V-ISAM

2021-02-17  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Always set size of rid_tablename to 8 

2021-02-16  Ron Norman <rjn@inglenet.com>

	* codegen.c: fixed some compile warnings
	* sqlxfdgen.c: Changes to use rid_tablename as unique row number
				This is used for better performance reading thru duplicate
				keys and limiting the row processed in one SELECT

2021-02-09  Ron Norman <rjn@inglenet.com>

	* cobc.c,flag.def,codegen.c,field.c: changed -fsqldb= to flag -fsql

2021-02-04  Simon Sobisch <simonsobisch@gnu.org>

	* codeoptim.c (COB_GET_NUMDISPS, COB_GET_NUMDISPS64):
	  use intermediate register for comparison

2021-02-01  Ron Norman <rjn@inglenet.com>

	* parser.y: Removed PENDING for COMMIT/ROLLBACK options
	* typeck.c: Set on COB_LOCK_ROLLBACK as requested

2021-01-28  James K. Lowden  <jklowden@symas.com>

	* cobc.c (cobc_error_name): do not write to const parameter

2021-01-28  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Added checks for NN - Minutes, JJJ - day of year
				EEE - day of year, TT - hundreds of second
