@@ -7903,6 +7903,450 @@ AT_CHECK([gcdiff reference dumpall.txt], [0], [], [])
 
 AT_CLEANUP
 
+AT_SETUP([Test dump feature (4)])
+AT_KEYWORDS([Dump])
+
+AT_DATA([./cpyabrt], [            MOVE "Quick brown fox jumped over the dog" 
+              TO TSTTAILX (1:40).
+            MOVE TSP-RECORD TO TSTTAILX (42:20).
+      *     DISPLAY ':' X ':'.
+      *     DISPLAY CM-COMPANY.
+      *     DISPLAY '>' CM-COMPANY '<'.
+])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+      
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+           SELECT FLATFILE ASSIGN EXTERNAL RELFIX
+           ORGANIZATION RELATIVE
+           ACCESS IS SEQUENTIAL RELATIVE KEY IS REC-NUM
+           FILE STATUS IS CUST-STAT.
+
+       DATA  DIVISION.
+       FILE SECTION.
+       FD  FLATFILE
+           BLOCK CONTAINS 5 RECORDS.
+      
+       01  TSPFL-RECORD.
+           10  CM-CUST-NUM                     PICTURE X(8). 
+           10  CM-COMPANY                      PICTURE X(25). 
+           10  CM-DISK                         PICTURE X(8). 
+           10  CM-NO-TERMINALS                 PICTURE 9(4).
+      
+       01  XX-RECORD.
+           10  XX-CUST-NUM                     PICTURE X(8). 
+           10  XX-COMPANY                      PICTURE X(25). 
+           10  XX-DISK                         PICTURE X(8). 
+           10  XX-NO-TERMINALS                 PICTURE 9(4).
+      
+       WORKING-STORAGE SECTION.
+       77  MAX-SUB           VALUE  6          PICTURE 9(4) COMP SYNC.
+       77  CUST-STAT                           PICTURE X(2).
+       77  REC-NUM           VALUE  1          PICTURE 9(4).
+       77  UNUSED-VAR        VALUE  1          PICTURE 9(4).
+       01  BIN                      PIC 9(9) BINARY VALUE 0.
+       01  PACKD                    PIC 9(4)V99 COMP-3 VALUE 757.99.
+      
+       01  TEST-DATA.
+         02  DATA-CUST-NUM-TBL.
+           05  FILLER PIC X(8) VALUE "ALP00000".
+           05  FILLER PIC X(8) VALUE "BET00000".
+           05  FILLER PIC X(8) VALUE "DEL00000".
+           05  FILLER PIC X(8) VALUE "EPS00000".
+           05  FILLER PIC X(8) VALUE "FOR00000".
+           05  FILLER PIC X(8) VALUE "GAM00000".
+      
+         02  DATA-CUST-NUM REDEFINES DATA-CUST-NUM-TBL
+                                       PIC X(8) OCCURS 6.
+         02  DATA-COMPANY-TBL.
+           05  FILLER PIC X(25) VALUE "ALPHA ELECTRICAL CO. LTD.".
+           05  FILLER PIC X(25) VALUE "BETA SHOE MFG. INC.      ".
+           05  FILLER PIC X(25) VALUE "DELTA LUGGAGE REPAIRS    ".
+           05  FILLER PIC X(25) VALUE "EPSILON EQUIPMENT SUPPLY ".
+           05  FILLER PIC X(25) VALUE "FORTUNE COOKIE COMPANY   ".
+           05  FILLER PIC X(25) VALUE "GAMMA X-RAY TECHNOLOGY   ".
+         02  DATA-COMPANY  REDEFINES DATA-COMPANY-TBL
+                                       PIC X(25) OCCURS 6.
+         02  DATA-ADDRESS-2-TBL.
+           05  FILLER PIC X(10) VALUE "ATLANTA   ".
+           05  FILLER PIC X(10) VALUE "CALGARY   ".
+           05  FILLER PIC X(10) VALUE "NEW YORK  ".
+           05  FILLER PIC X(10) VALUE "TORONTO   ".
+           05  FILLER PIC X(10) VALUE "WASHINGTON".
+           05  FILLER PIC X(10) VALUE "WHITEPLAIN".
+         02  DATA-ADDRESS   REDEFINES DATA-ADDRESS-2-TBL
+                                       PIC X(10) OCCURS 6
+                                       INDEXED BY I-ADDR.
+
+         02  DATA-NO-TERMINALS-TBL.
+           05  FILLER PIC 9(3) COMP-3 VALUE 10.
+           05  FILLER PIC 9(3) COMP-3 VALUE 13.
+           05  FILLER PIC 9(3) COMP-3 VALUE 75.
+           05  FILLER PIC 9(3) COMP-3 VALUE 10.
+           05  FILLER PIC 9(3) COMP-3 VALUE 90.
+           05  FILLER PIC 9(3) COMP-3 VALUE 254.
+         02  DATA-NO-TERMINALS REDEFINES DATA-NO-TERMINALS-TBL
+                                       PIC 9(3) COMP-3 OCCURS 6.
+       01  TSTREC BASED.
+         05  TSTDEP  PIC XXX.
+         05  TSTX OCCURS 4 TIMES.
+           15  TSTG-1 PIC 99.
+           15  TSTX-2 PIC XX OCCURS 4 TIMES.
+      
+       01  WORK-AREA IS EXTERNAL.
+           05  SUB                             PICTURE 9(4) COMP SYNC.
+               88  ODD-RECORD                  VALUE 1 3 5.
+      
+       PROCEDURE DIVISION.
+
+           PERFORM LOADFILE.
+
+           OPEN INPUT FLATFILE.
+           READ FLATFILE.
+
+       MAIN-100.
+           PERFORM CALL-SUB-1.
+           PERFORM CALL-SUB-2.
+           PERFORM CALL-IT-OMIT.
+           STOP RUN.
+
+       LOADFILE.
+           OPEN OUTPUT FLATFILE.
+      
+           PERFORM LOAD-RECORD
+                        VARYING SUB FROM 1 BY 1 
+                          UNTIL SUB > MAX-SUB.
+      
+           CLOSE FLATFILE.
+      
+       LISTFILE.
+           OPEN INPUT FLATFILE.
+           READ FLATFILE.
+           CLOSE FLATFILE.
+      
+       LOAD-RECORD.
+      
+           MOVE SPACES                       TO TSPFL-RECORD.
+           MOVE DATA-CUST-NUM      (SUB)     TO CM-CUST-NUM.
+           MOVE DATA-COMPANY       (SUB)     TO CM-COMPANY.
+           MOVE DATA-NO-TERMINALS  (SUB)     TO CM-NO-TERMINALS.
+           IF  ODD-RECORD
+               MOVE "8417"                   TO CM-DISK 
+           ELSE
+               MOVE "8470"                   TO CM-DISK.
+           WRITE TSPFL-RECORD.
+
+       CALL-SUB-1 SECTION.
+           CALL "sub1" USING bin, "Peek a boo!".
+       
+       CALL-SUB-2 SECTION.
+           CALL "sub2" USING 4096, TSPFL-RECORD.
+       
+       CALL-IT-OMIT SECTION.
+           CALL "sub2" USING PACKD, OMITTED.
+
+           END PROGRAM prog.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. sub1.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  ZRO PIC 9(9) BINARY VALUE 0.
+       01  HEXV PIC X  COMP-X.
+       01  HEXC REDEFINES HEXV PIC X.
+
+       01  IDX PIC 9(9) BINARY VALUE 0.
+       01  TSTREC.
+         05  TSTDEP  PIC XXX.
+         05  TSTX OCCURS 4 TIMES.
+           15  TSTG-1 PIC 99.
+           15  TSTX-2 PIC XX OCCURS 4 TIMES.
+         05  TSTTAIL1  PIC 99.
+         05  TSTCOMP3  PIC 9(5) COMP-3.
+         05  TSTLONG   PIC X(100).
+         05  TSTHEX    PIC X(100).
+         05  TSTHEX2   PIC X(60).
+         05  TSTTAILX  PIC X(80).
+
+       LINKAGE SECTION.
+       01  X          PIC 9 ANY NUMERIC.
+       01  TSP-RECORD PIC X ANY LENGTH.
+       
+       PROCEDURE DIVISION USING X, TSP-RECORD.
+       MAIN-1 SECTION.
+            MOVE ALL "X" TO TSTREC.
+            MOVE 1 TO TSTG-1 (1).
+            MOVE 2 TO TSTG-1 (2).
+            MOVE 3 TO TSTG-1 (3).
+            MOVE 'A' TO TSTX-2 (1,1).
+            MOVE 'B' TO TSTX-2 (2,1).
+            MOVE 'C' TO TSTX-2 (3,1).
+            MOVE 'xx' TO TSTX-2 (1,4).
+            MOVE 'yy' TO TSTX-2 (2,4).
+            MOVE 'zz' TO TSTX-2 (3,4).
+            MOVE SPACES TO TSTX-2 (1,3).
+            MOVE HIGH-VALUES TO TSTX (4).
+            MOVE LOW-VALUES TO TSTX-2 (2,3).
+            MOVE HIGH-VALUES TO TSTX-2 (3,3).
+            MOVE "Quick brown fox jumped over the dog"
+              TO TSTLONG, TSTLONG (50:36).
+            MOVE "Quicker grey fox jumped the cougar"
+              TO TSTHEX (1:35).
+       MAIN-2.
+            MOVE 17 TO HEXV.
+            MOVE HEXC TO TSTHEX (39:1).
+            MOVE HEXC TO TSTTAIL1 (2:1).
+            MOVE 7 TO HEXV.
+            MOVE HEXC TO TSTHEX (47:1).
+            MOVE 13 TO HEXV.
+            MOVE HEXC TO TSTHEX (59:1).
+            MOVE 0 TO HEXV.
+            MOVE HEXC TO TSTHEX2 (39:1), TSTHEX2 (10:1).
+            MOVE 9 TO HEXV.
+            MOVE HEXC TO TSTHEX2 (47:1).
+            MOVE '\' TO TSTHEX2 (32:1).
+            MOVE 13 TO HEXV.
+            MOVE HEXC TO TSTHEX2 (59:1).
+            MOVE 'A' TO TSTHEX2 (54:1).
+            MOVE LOW-VALUES TO TSTTAILX
+            ADD 1 TO X.
+            IF TSP-RECORD OMITTED
+               DISPLAY "sub1: X is " X " RECORD: Omitted."
+            ELSE
+               DISPLAY "sub1: X is " X " RECORD:" TSP-RECORD "."
+            END-IF.
+            COPY cpyabrt.
+        GOBACK.
+       END PROGRAM sub1.
+
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. sub2.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  ZRO PIC 9(9) BINARY VALUE 0.
+       01  PTR USAGE POINTER.
+       01  HEXV PIC X  COMP-X.
+       01  HEXC REDEFINES HEXV PIC X.
+
+       01  IDX PIC 9(9) BINARY VALUE 0.
+       01  TSTREC.
+         05  TSTDEP  PIC XXX.
+         05  TSTX OCCURS 4 TIMES.
+           15  TSTG-1 PIC 99.
+           15  TSTX-2 PIC XX OCCURS 4 TIMES.
+         05  TSTTAIL1  PIC 99.
+         05  TSTCOMP3  PIC 9(5) COMP-3.
+         05  TSTLONG   PIC X(100).
+         05  TSTHEX    PIC X(100).
+         05  TSTHEX2   PIC X(60).
+         05  TSTTAILX  PIC X(80).
+
+       LINKAGE SECTION.
+       01  X          PIC 9 ANY NUMERIC.
+       01  TSP-RECORD PIC X ANY LENGTH.
+       
+       PROCEDURE DIVISION USING X, TSP-RECORD.
+            MOVE ALL "X" TO TSTREC.
+            MOVE 1 TO TSTG-1 (1).
+            MOVE 2 TO TSTG-1 (2).
+            MOVE 3 TO TSTG-1 (3).
+            MOVE 'A' TO TSTX-2 (1,1).
+            MOVE 'B' TO TSTX-2 (2,1).
+            MOVE 'C' TO TSTX-2 (3,1).
+            MOVE 'xx' TO TSTX-2 (1,4).
+            MOVE 'yy' TO TSTX-2 (2,4).
+            MOVE 'zz' TO TSTX-2 (3,4).
+            MOVE SPACES TO TSTX-2 (1,3).
+            MOVE HIGH-VALUES TO TSTX (4).
+            MOVE LOW-VALUES TO TSTX-2 (2,3).
+            MOVE HIGH-VALUES TO TSTX-2 (3,3).
+            MOVE "Quick brown fox jumped over the dog"
+              TO TSTLONG, TSTLONG (50:36).
+            MOVE "Quicker grey fox jumped the cougar"
+              TO TSTHEX (1:35).
+            MOVE 17 TO HEXV.
+            MOVE HEXC TO TSTHEX (39:1).
+            MOVE HEXC TO TSTTAIL1 (2:1).
+            MOVE 7 TO HEXV.
+            MOVE HEXC TO TSTHEX (47:1).
+            MOVE 13 TO HEXV.
+            MOVE HEXC TO TSTHEX (59:1).
+            MOVE 0 TO HEXV.
+            MOVE HEXC TO TSTHEX2 (39:1), TSTHEX2 (10:1).
+            MOVE 9 TO HEXV.  MOVE HEXC TO TSTHEX2 (47:1).
+            MOVE '\' TO TSTHEX2 (32:1).
+            MOVE 13 TO HEXV.  MOVE HEXC TO TSTHEX2 (59:1).
+            MOVE 'A' TO TSTHEX2 (54:1).
+            MOVE LOW-VALUES TO TSTTAILX.
+            IF TSP-RECORD OMITTED
+               DISPLAY "sub2: X is " X " RECORD: Omitted."
+               SET PTR TO NULL
+               SET PTR UP BY 54545
+               SET ADDRESS OF TSP-RECORD TO PTR
+            ELSE
+               DISPLAY "sub2: X is " X " RECORD:" TSP-RECORD "."
+            END-IF.
+            COPY cpyabrt.
+       END PROGRAM sub2.
+])
+
+AT_CHECK([$COMPILE -std=default -debug -fdump=ALL prog.cob ], [0], [], [])
+
+AT_CHECK([export COB_DUMP_FILE=dumpall.txt
+$COBCRUN_DIRECT ./prog], [11], [sub1: X is 000000001 RECORD:Peek a boo!.
+sub2: X is +000004096 RECORD:ALP00000ALPHA ELECTRICAL CO. LTD.8417    0010.
+sub2: X is 0757.99 RECORD: Omitted.
+], [
+cpyabrt:3: attempt to reference invalid memory address (signal SIGSEGV)
+
+libcob: cpyabrt:3: warning: implicit CLOSE of FLATFILE ('RELFIX')
+
+dump written to dumpall.txt
+])
+
+
+AT_CAPTURE_FILE(./dumpall.txt)
+
+AT_DATA([reference], [
+Module dump due to signal SIGSEGV
+
+ Last statement of sub2 was at line 3 of cpyabrt
+ Last statement of prog was at line 135 of prog.cob   
+
+Dump Program-Id sub2 from prog.cob compiled MMM DD YYYY HH:MI:SS
+
+WORKING-STORAGE
+**********************
+01        ZRO                             000000000
+01        PTR                             0x000000000000d511
+01        HEXV                            013
+01        IDX                             000000000
+01        TSTREC.
+  05      TSTDEP                         'XXX'
+  05      TSTX (1).
+       15 TSTG-1 (1)                      01
+       15 TSTX-2 (1,1)                   'A'
+       15 TSTX-2 (1,2)                   'XX'
+       15 TSTX-2 (1,3)                   ALL SPACES
+       15 TSTX-2 (1,4)                   'xx'
+  05      TSTX (2).
+       15 TSTG-1 (2)                      02
+       15 TSTX-2 (2,1)                   'B'
+       15 TSTX-2 (2,2)                   'XX'
+       15 TSTX-2 (2,3)                   ALL LOW-VALUES
+       15 TSTX-2 (2,4)                   'yy'
+  05      TSTX (3).
+       15 TSTG-1 (3)                      03
+       15 TSTX-2 (3,1)                   'C'
+       15 TSTX-2 (3,2)                   'XX'
+       15 TSTX-2 (3,3)                   ALL HIGH-VALUES
+       15 TSTX-2 (3,4)                   'zz'
+  05      TSTX (4).
+       15 TSTG-1 (4)                     ALL HIGH-VALUES
+       15 TSTX-2 (4,1)                   ALL HIGH-VALUES
+       15 TSTX-2 (4,2..4) same as (1)
+  05      TSTTAIL1                        X  
+                                     1 x 5811
+  05      TSTCOMP3                        58585
+  05      TSTLONG                        'Quick brown fox jumped over the dog              Quick br'
+                                      57:'own fox jumped over the dog'
+  05      TSTHEX                          Q u i c  k e r    g r e y    f o x    j u m  p e d  
+                                     1 x 51756963 6B657220 67726579 20666F78 206A756D 70656420
+                                          t h e    c o u g  a r   X  X X   X  X X X X  X X   X
+                                    25 x 74686520 636F7567 61722058 58581158 58585858 58580758
+                                          X X X X  X X X X  X X   X  X X X X  X X X X  X X X X
+                                    49 x 58585858 58585858 58580D58 58585858 58585858 58585858
+                                          X X X X  X X X X  X X X X  X X X X  X X X X  X X X X
+                                    73 x 58585858 58585858 58585858 58585858 58585858 58585858
+                                          X X X X
+                                    97 x 58585858
+  05      TSTHEX2                        XXXXXXXXX\0XXXXXXXXXXXXXXXXXXXXX\\XXXXXX\0XXXXXXX\tXXXXXX
+                                    54 : AXXXX\rX
+  05      TSTTAILX                       'Quick brown fox jumped over the dog     '
+                                  trailing LOW-VALUES
+
+LINKAGE
+**********************
+01        X                               0757.99
+01        TSP-RECORD                     
+ >>>> Dump of TSP-RECORD aborted! <<<< !!
+**********************
+
+END OF DUMP - sub2
+**********************
+
+Dump Program-Id prog from prog.cob compiled MMM DD YYYY HH:MI:SS
+
+FD FLATFILE
+**********************
+   File is OPEN
+   FILE STATUS  '00'
+01        TSPFL-RECORD.
+     10   CM-CUST-NUM                    'ALP00000'
+     10   CM-COMPANY                     'ALPHA ELECTRICAL CO. LTD.'
+     10   CM-DISK                        '8417'
+     10   CM-NO-TERMINALS                 0010
+     10   XX-CUST-NUM                    'ALP00000'
+     10   XX-COMPANY                     'ALPHA ELECTRICAL CO. LTD.'
+     10   XX-DISK                        '8417'
+     10   XX-NO-TERMINALS                 0010
+
+WORKING-STORAGE
+**********************
+77        MAX-SUB                         0006
+77        CUST-STAT                      ALL ZEROES
+77        REC-NUM                         0001
+77        UNUSED-VAR                      0001
+01        BIN                             000000001
+01        PACKD                           0757.99
+   INDEX  I-ADDR                          +000000001
+01        TEST-DATA.
+ 02       DATA-CUST-NUM-TBL.
+  05      FILLER                         'ALP00000'
+  05      FILLER                         'BET00000'
+  05      FILLER                         'DEL00000'
+  05      FILLER                         'EPS00000'
+  05      FILLER                         'FOR00000'
+  05      FILLER                         'GAM00000'
+ 02       DATA-COMPANY-TBL.
+  05      FILLER                         'ALPHA ELECTRICAL CO. LTD.'
+  05      FILLER                         'BETA SHOE MFG. INC.'
+  05      FILLER                         'DELTA LUGGAGE REPAIRS'
+  05      FILLER                         'EPSILON EQUIPMENT SUPPLY'
+  05      FILLER                         'FORTUNE COOKIE COMPANY'
+  05      FILLER                         'GAMMA X-RAY TECHNOLOGY'
+ 02       DATA-ADDRESS-2-TBL.
+  05      FILLER                         'ATLANTA'
+  05      FILLER                         'CALGARY'
+  05      FILLER                         'NEW YORK'
+  05      FILLER                         'TORONTO'
+  05      FILLER                         'WASHINGTON'
+  05      FILLER                         'WHITEPLAIN'
+ 02       DATA-NO-TERMINALS-TBL.
+  05      FILLER                          010
+  05      FILLER                          013
+  05      FILLER                          075
+  05      FILLER                          010
+  05      FILLER                          090
+  05      FILLER                          254
+01        TSTREC.                        <NULL> address
+01        WORK-AREA.
+  05      SUB                             0007
+
+END OF DUMP - prog   
+**********************
+
+])
+
+AT_CHECK([gcdiff reference dumpall.txt], [0], [], [])
+
+AT_CLEANUP
+
 
 # PROCEDURE DIVISION RETURNING OMITTED, CALL RETURNING NOTHING
 AT_SETUP([void PROCEDURE, NOTHING return])
